# Easel

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  RenderDoc Capture Settings.cap
shaders/: .clang-format  color-wipe.frag  post-process-srgb.frag  post-process-srgb.spv  render-postprocess-to-swapchain.spv  vert.spv  wipe-uniforms.json
src/: dashboard.rs  drawable.rs  main.rs  push_constants.rs  recording.rs  skeletons.rs  uniforms.rs  utils.rs  vector.rs
src/canvas/: file_loading.rs  message.rs  mod.rs  rendering.rs
src/dashboard/: mod.rs  state.rs  ui.rs
src/postprocessing/: mod.rs
src/texture/: generative.rs  mod.rs
