[package]
name = "easel"
version = "1.0.0"
authors = ["Siddharth Atre <sid.atre@me.com>"]
edition = "2018"
keywords = [
    "shaders",
    "painting",
    "computer graphics",
    "art",
    "shadertoy",
    "gamedev",
    "creative coding",
]
license-file = "LICENSE"
description = "A shader playground for creating high resolution digital paintings."
repository = "https://github.com/Satre95/Easel"
readme = "README.md"

[dependencies]
image = "0.23.12"
winit = "0.23.0"
futures = "0.3.8"
raw-window-handle = "0.3.3"
shaderc = "0.7.0"
clap = "3.0.0-beta.2"
stopwatch = "0.0.7"
chrono = "0.4.19"
imgui = "0.6.0"
imgui-wgpu = "0.12"
imgui-winit-support = "0.6"
byteorder = "1.3.4"
notify = "4.0.15"
json = "0.12.4"
half = "1.6.0"
log = "0.4.11"
env_logger = "0.8.2"

#[dependencies.noise]
#version = "0.6"
#features = ["image"]

[dependencies.bytemuck]
version = "1.4.1"
features = ["derive"]

[dependencies.wgpu]
version = "0.6.2"
