[package]
authors = ["Siddharth Atre <sid.atre@me.com>"]
categories = [
  "game-development",
  "graphics",
  "multimedia",
  "visualization",
]
description = "A shader playground for creating high resolution digital paintings."
edition = "2018"
exclude = [".vscode/*", "RenderDoc Capture Settings.cap"]
keywords = ["shaders", "painting", "art", "shadertoy", "creative-coding"]
license-file = "LICENSE"
name = "easel-rs"
readme = "README.md"
repository = "https://github.com/Satre95/Easel"
version = "1.0.4"

[dependencies]
byteorder = "1.3.4"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
env_logger = "0.8.2"
futures = "0.3.8"
half = "1.6.0"
image = "0.23.12"
imgui = "0.6.1"
imgui-wgpu = "0.12.0"
imgui-winit-support = "0.6.1"
json = "0.12.4"
log = "0.4.11"
notify = "4.0.15"
raw-window-handle = "0.3.3"
shaderc = "0.7.0"
stopwatch = "0.0.7"
winit = "0.24.0"

#[dependencies.noise]
#version = "0.6"
#features = ["image"]

[dependencies.bytemuck]
features = ["derive"]
version = "1.4.1"

[dependencies.wgpu]
version = "0.6.2"

[[bin]]
doc = true
name = "easel"
path = "src/main.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--all-targets", "--release"]
