[package]
authors = ["Siddharth Atre <sid.atre@me.com>"]
categories = ["game-development", "graphics", "multimedia", "visualization"]
description = "A shader playground for creating high resolution digital paintings."
edition = "2018"
exclude = [".vscode/*", "RenderDoc Capture Settings.cap"]
keywords = ["shaders", "painting", "art", "shadertoy", "creative-coding"]
license-file = "LICENSE"
name = "easel-rs"
readme = "README.md"
repository = "https://github.com/Satre95/Easel"
version = "1.0.6"

[dependencies]
byteorder = "1.4.2"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
env_logger = "0.8.2"
futures = "0.3.12"
half = "1.7.1"
image = "0.23.12"
imgui = "0.7.0"
imgui-wgpu = "0.15.1"
json = "0.12.4"
log = "0.4.13"
notify = "4.0.15"
raw-window-handle = "0.3.3"
shaderc = "0.7.0"
stopwatch = "0.0.7"
wgpu = "0.8.1"
winit = "0.25.0"

#[dependencies.noise]
#version = "0.6"
#features = ["image"]

[dependencies.bytemuck]
features = ["derive"]
version = "1.5.0"

[dependencies.imgui-winit-support]
default-features = false
features = ["winit-25"]
version = "0.7.1"

[[bin]]
doc = true
name = "easel"
path = "src/main.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--all-targets", "--release"]

[profile.dev]
split-debuginfo = "unpacked"
